--- a/airflow/docker-compose.yml
+++ b/airflow/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 version: "3.8"
 
 services:
@@ -17,7 +15,9 @@ services:
       retries: 5
 
   airflow-webserver:
-    image: apache/airflow:2.9.1
+    build:
+      context: .
+      dockerfile: Dockerfile
     depends_on:
       postgres:
         condition: service_healthy
@@ -28,14 +28,19 @@ services:
       AIRFLOW__WEBSERVER__WORKERS: 1
     volumes:
       - ./dags:/opt/airflow/dags
-      - ./scripts:/opt/scripts
+      - ./scripts:/opt/airflow/scripts
+      - ./data:/opt/airflow/data
+      - ./logs:/opt/airflow/logs
+      - ./requirements.txt:/requirements.txt
     ports:
       - "8081:8080"
     command: webserver
     restart: always
 
   airflow-scheduler:
-    image: apache/airflow:2.9.1
+    build:
+      context: .
+      dockerfile: Dockerfile
     depends_on:
       postgres:
         condition: service_healthy
@@ -45,12 +50,17 @@ services:
       AIRFLOW__WEBSERVER__SECRET_KEY: some_secret_key
     volumes:
       - ./dags:/opt/airflow/dags
-      - ./scripts:/opt/scripts
+      - ./scripts:/opt/airflow/scripts
+      - ./data:/opt/airflow/data
+      - ./logs:/opt/airflow/logs
+      - ./requirements.txt:/requirements.txt
     command: scheduler
     restart: always
 
   airflow-init:
-    image: apache/airflow:2.9.1
+    build:
+      context: .
+      dockerfile: Dockerfile
     depends_on:
       postgres:
         condition: service_healthy
@@ -60,8 +70,12 @@ services:
       AIRFLOW__WEBSERVER__SECRET_KEY: some_secret_key
     volumes:
       - ./dags:/opt/airflow/dags
-      - ./scripts:/opt/scripts
+      - ./scripts:/opt/airflow/scripts
+      - ./data:/opt/airflow/data
+      - ./logs:/opt/airflow/logs
+      - ./requirements.txt:/requirements.txt
     command: bash -c "airflow db migrate && airflow users create --username admin --password admin --firstname Tim --lastname Finch --role Admin --email admin@example.com"
 
 volumes:
   postgres-db-volume:
+  logs:
