--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,1 @@
-services:
-  mysql:
-    image: mysql:8.0
-    container_name: marketing_mysql
-    restart: always
-    ports:
-      - "3307:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpass
-      MYSQL_DATABASE: marketing_db
-      MYSQL_USER: marketing_user
-      MYSQL_PASSWORD: marketing_pass
-    volumes:
-      - mysql_data:/var/lib/mysql
-
-volumes:
-  mysql_data:
+# This file has been deprecated. Use airflow/docker-compose.yml instead for all services.
