Finalize model tracking with MLflow, update README, add artifacts structure

--- a/models/model_config.yaml
+++ b/models/model_config.yaml
@@ -4,8 +4,11 @@ model:
     penalty: l2             # Regularization penalty (l1 or l2)
     C: 1.0                  # Inverse of regularization strength
     solver: liblinear       # Optimization algorithm
-    max_iter: 100           # Maximum iterations for convergence
+    max_iter: 20000           # Maximum iterations for convergence
 
 training:
   cv_folds: 5               # Number of cross-validation folds
   scoring: accuracy         # Metric to optimize during model evaluation
+
+data:
+  target_column: Response   # Column in the dataset to use as target label
