--- a/requirements.txt
+++ b/requirements.txt
@@ -127,8 +127,7 @@ pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.21
-pydantic==2.4.2
-pydantic-extra-types==2.10.3
+pydantic>=1.10.0,<2.0.0
 pydantic-settings==2.8.1
 pydantic_core==2.10.1
 pydeck==0.9.1
@@ -179,7 +178,7 @@ tornado==6.4.2
 tqdm==4.67.1
 typer==0.15.2
 typing-inspection==0.4.0
-typing_extensions==4.8.0
+typing_extensions>=4.10.0
 tzdata==2025.2
 uc-micro-py==1.0.2
 ujson==5.10.0
