--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,9 +29,35 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=100 --statistics
 
-  docker-build:
+  test:
     runs-on: ubuntu-latest
     needs: build-and-lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest
+
+      - name: Run FastAPI tests
+        run: |
+          pytest tests/test_fastapi.py --maxfail=1 --disable-warnings -q
+
+      - name: Run Streamlit tests
+        run: |
+          pytest tests/test_streamlit.py --maxfail=1 --disable-warnings -q
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
