--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ dill==0.3.1.1
 dnspython==2.4.2
 docker==7.1.0
 docutils==0.20.1
-email-validator==1.3.1
+email-validator>=2.0
 fastapi==0.115.12
 Flask==2.2.5
 Flask-AppBuilder==4.3.6
