Refactor requirements: isolate Airflow and Streamlit dependencies into separate files
- Split  into  and  to resolve package conflicts (e.g. )
- Commented out conflicting  line with explanation
- Retained  for backwards compatibility and documentation
- Updated README to reflect new environment setup and installation instructions

--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,8 @@ dill>=0.3.6
 dnspython==2.4.2
 docker==7.1.0
 docutils==0.20.1
-email-validator=<2.0
+# email-validator version conflict with Flask-AppBuilder — handled in sub-requirement files
+# email-validator>=2.0  # COMMENTED OUT DUE TO CONFLICT WITH Flask-AppBuilder (<2.0 required)
 fastapi==0.115.12
 Flask==2.2.5
 Flask-AppBuilder>=4.3.6
@@ -399,4 +400,4 @@ waitress==2.1.2
 # yarl==1.9.2
 # zipp==3.17.0
 
-# waitress==2.1.2
+waitress==2.1.2
