Refactor requirements: isolate Airflow and Streamlit dependencies into separate files
- Split  into  and  to resolve package conflicts (e.g. )- Commented out conflicting  line with explanation- Retained  for backwards compatibility and documentation - Updated README to reflect new environment setup and installation instructions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+# NOTE: This file is retained for backwards compatibility.
+# All dependencies have been split into:
+# - requirements-airflow.txt
+# - requirements-streamlit.txt
+
 aiohttp>=3.9.3
 aiosignal==1.3.1
 alembic==1.12.1
