--- a/requirements-streamlit.txt
+++ b/requirements-streamlit.txt
@@ -1,8 +1,9 @@
 streamlit==1.44.1
 pandas==2.2.2
-numpy==2.2.4
+numpy==1.26.4
 matplotlib==3.10.1
 plotly==5.22.0
 requests==2.32.3
 scikit-learn==1.5.0
 pyarrow==15.0.2
+more-itertools==10.7.0
