Remove email-validator from airflow requirements as it's not used in the code

--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ dill>=0.3.6
 dnspython==2.4.2
 docker==7.1.0
 docutils==0.20.1
+email-validator>=2.0
 # email-validator version conflict with Flask-AppBuilder — handled in sub-requirement files
 # email-validator>=2.0  # COMMENTED OUT DUE TO CONFLICT WITH Flask-AppBuilder (<2.0 required)
 fastapi==0.115.12
