--- a/airflow/requirements.txt
+++ b/airflow/requirements.txt
@@ -7,8 +7,10 @@ charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.2
 delta-spark==3.0.0
+# dnspython is a dependency of email-validator and flask-appbuilder
 dnspython==2.7.0
-email_validator==2.2.0
+# Flask AppBuilder and related dependencies
+email-validator==2.2.0
 # FastAPI and related dependencies
 fastapi==0.115.12
 httpx==0.28.1
