--- a/Dockerfile.fastapi
+++ b/Dockerfile.fastapi
@@ -14,3 +14,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Expose FastAPI default port
 EXPOSE 8000
+
+CMD ["uvicorn", "scoring.main:app", "--host", "0.0.0.0", "--port", "8000"]
