--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,4 +1,4 @@
 FROM apache/airflow:2.9.1-python3.10
 
-COPY requirements.txt /requirements.txt
-RUN pip install --no-cache-dir -r /requirements.txt
+COPY requirements-airflow.txt /requirements.txt
+RUN pip install --no-cache-dir -r /requirements.txt && rm /requirements.txt
