Fix DAGs not showing in Airflow by updating docker-compose volume mounts and ensuring correct paths for models and DAGs.

--- a/airflow/docker-compose.yml
+++ b/airflow/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+# version: "3.8"
 
 services:
   postgres:
@@ -27,11 +27,12 @@ services:
       AIRFLOW__WEBSERVER__SECRET_KEY: some_secret_key
       AIRFLOW__WEBSERVER__WORKERS: 1
     volumes:
-      - ./dags:/opt/airflow/dags
+      - ./airflow/dags:/opt/airflow/dags
+      - ./models:/opt/models
       - ./scripts:/opt/airflow/scripts
       - ./data:/opt/airflow/data
       - ./logs:/opt/airflow/logs
-      - ./airflow/requirements-airflow.txt:/requirements-airflow.txt
+      - ./requirements-airflow.txt:/requirements-airflow.txt
     ports:
       - "8081:8080"
     command: bash -c "pip install -r /requirements-airflow.txt && airflow webserver"
@@ -49,11 +50,12 @@ services:
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
       AIRFLOW__WEBSERVER__SECRET_KEY: some_secret_key
     volumes:
-      - ./dags:/opt/airflow/dags
+      - ./airflow/dags:/opt/airflow/dags
+      - ./models:/opt/models
       - ./scripts:/opt/airflow/scripts
       - ./data:/opt/airflow/data
       - ./logs:/opt/airflow/logs
-      - ./airflow/requirements-airflow.txt:/requirements-airflow.txt
+      - ./requirements-airflow.txt:/requirements-airflow.txt
     command: bash -c "pip install -r /requirements-airflow.txt && airflow scheduler"
     restart: always
 
@@ -69,11 +71,12 @@ services:
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
       AIRFLOW__WEBSERVER__SECRET_KEY: some_secret_key
     volumes:
-      - ./dags:/opt/airflow/dags
+      - ./airflow/dags:/opt/airflow/dags
+      - ./models:/opt/models
       - ./scripts:/opt/airflow/scripts
       - ./data:/opt/airflow/data
       - ./logs:/opt/airflow/logs
-      - ./airflow/requirements-airflow.txt:/requirements-airflow.txt
+      - ./requirements-airflow.txt:/requirements-airflow.txt
     command: bash -c "pip install -r /requirements-airflow.txt && airflow db migrate && airflow users create --username admin --password admin --firstname Tim --lastname Finch --role Admin --email admin@example.com"
 
 volumes:
