--- a/Dockerfile.fastapi
+++ b/Dockerfile.fastapi
@@ -5,14 +5,13 @@ FROM tiangolo/uvicorn-gunicorn-fastapi:python3.11
 # Set working directory
 WORKDIR /app
 
-# Copy app code
 COPY ./scoring /app
 
 # Install dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements-fastapi.txt .
+RUN pip install --no-cache-dir -r requirements-fastapi.txt
 
 # Expose FastAPI default port
 EXPOSE 8000
 
-CMD ["uvicorn", "scoring.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "scoring.app.main:app", "--host", "0.0.0.0", "--port", "8000"]
