--- a/airflow/docker-compose.yml
+++ b/airflow/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       AIRFLOW__WEBSERVER__SECRET_KEY: some_secret_key
       AIRFLOW__WEBSERVER__WORKERS: 1
     volumes:
-      - ./airflow/dags:/opt/airflow/dags
+      - ./dags:/opt/airflow/dags
       - ./models:/opt/models
       - ./scripts:/opt/airflow/scripts
       - ./data:/opt/airflow/data
@@ -50,7 +50,7 @@ services:
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
       AIRFLOW__WEBSERVER__SECRET_KEY: some_secret_key
     volumes:
-      - ./airflow/dags:/opt/airflow/dags
+      - ./dags:/opt/airflow/dags
       - ./models:/opt/models
       - ./scripts:/opt/airflow/scripts
       - ./data:/opt/airflow/data
@@ -71,7 +71,7 @@ services:
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
       AIRFLOW__WEBSERVER__SECRET_KEY: some_secret_key
     volumes:
-      - ./airflow/dags:/opt/airflow/dags
+      - ./dags:/opt/airflow/dags
       - ./models:/opt/models
       - ./scripts:/opt/airflow/scripts
       - ./data:/opt/airflow/data
