--- a/requirements-fastapi.txt
+++ b/requirements-fastapi.txt
@@ -1,4 +1,5 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-pydantic==2.10.0
-email-validator>=2.0  # If you still need email validation
+fastapi==0.123.10
+uvicorn[standard]==0.38.0
+pydantic==2.12.5
+email-validator==2.3.0
+python-multipart==0.0.20
