--- a/requirements-streamlit.txt
+++ b/requirements-streamlit.txt
@@ -1,10 +1,11 @@
-streamlit==1.44.1
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.10.1
-plotly==5.22.0
+streamlit==1.52.1
+pandas==2.3.3
+numpy==2.3.5
+matplotlib==3.10.3
+plotly==5.24.1
 requests==2.32.3
-scikit-learn==1.5.0
-pyarrow==15.0.2
-more-itertools==10.7.0
-email-validator>=1.0,<2.0
+scikit-learn==1.7.2
+pyarrow==22.0.0
+pymysql==1.1.1
+SQLAlchemy==2.0.44
+python-dotenv==1.0.1
