--- a/requirements-fastapi.txt
+++ b/requirements-fastapi.txt
@@ -4,3 +4,7 @@ pydantic==2.12.5
 email-validator==2.3.0
 python-multipart==0.0.20
 httpx==0.28.1
+opentelemetry-api==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-exporter-otlp==1.27.0
+opentelemetry-instrumentation-fastapi==0.48b0
